--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,18 @@ input:read-only {
 	color: white;
 	font-weight: normal;
 	font-size: 60%;
+	transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+	position: fixed;
+	bottom: 3%;
+	left:0;
+	z-index:1;
+	-moz-border-radius: 0 28px 28px 0; 
+	-webkit-border-radius: 0 28px 28px 0;
 }
 .alertclosebtn {
 	margin-left: 15px;
+	margin-top: 5px;
 	color: white;
 	font-weight: bold;
 	float: right;
@@ -151,6 +160,28 @@ input:read-only {
 .alertclosebtn:hover {
 	color: black;
 }		
+.slide-in {
+    animation: slide-in 0.5s forwards;
+    -webkit-animation: slide-in 0.5s forwards;
+}
+.slide-out {
+    animation: slide-out 0.5s forwards;
+    -webkit-animation: slide-out 0.5s forwards;
+}
+@keyframes slide-in {
+    100% { transform: translateX(0%); }
+}
+@-webkit-keyframes slide-in {
+    100% { -webkit-transform: translateX(0%); }
+}  
+@keyframes slide-out {
+    0% { transform: translateX(0%); }
+    100% { transform: translateX(-100%); }
+}
+@-webkit-keyframes slide-out {
+    0% { -webkit-transform: translateX(0%); }
+    100% { -webkit-transform: translateX(-100%); }
+}
 
 .modalbutton {
 	background-color:#ededed;
