--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -3,3 +3,38 @@
 	bottom:  !important;
 	right: 0 !important;
 }
+
+.fill { 
+    min-height: 100% !important;
+    height: 100% !important;
+}
+
+#history {
+	background-color: #e9ecef;
+    opacity: 1;
+	display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	
+	height: 180px;
+	overflow-y: scroll;
+	margin-left:auto; 
+	margin-right:0; 
+}	
+
+.font-sm {
+	font-size: 70%;
+}
+
+.custom-control-input:checked + .checkred {
+	background-color: red;
+	border-color: red;
+}
