--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -1,3 +1,7 @@
+.card, .btn, .form-control { 
+	border-radius: .75rem !important; 
+}
+
 .bottom-align-text {
 	position: absolute !important;
 	bottom:  !important;
@@ -14,6 +18,7 @@
     opacity: 1;
 	display: block;
     width: 100%;
+	overflow-y: scroll;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -21,11 +26,9 @@
     color: #495057;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: .25rem;
+    border-radius: .75rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-	
 	height: 180px;
-	overflow-y: scroll;
 	margin-left:auto; 
 	margin-right:0; 
 }	
@@ -34,7 +37,7 @@
 	font-size: 70%;
 }
 
-.custom-control-input:checked + .checkred {
-	background-color: red;
-	border-color: red;
+.custom-control-input:checked~.custom-control-label::before.checkred {
+  background-color: red;
+  border-color: red;
 }
