--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -1,10 +1,10 @@
-.card, .btn, .form-control { 
+.card, .btn, .form-control, .modal-content { 
 	border-radius: .75rem !important; 
 }
 
 .bottom-align-text {
 	position: absolute !important;
-	bottom:  !important;
+	bottom: 0 !important;
 	right: 0 !important;
 }
 
@@ -13,20 +13,26 @@
     height: 100% !important;
 }
 
+#historycontainer {
+	overflow: hidden;
+	border: 1px solid #ced4da;
+	border-radius: .75rem;
+}
+
 #history {
 	background-color: #e9ecef;
     opacity: 1;
 	display: block;
     width: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .75rem;
+    
+    
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 	height: 180px;
 	margin-left:auto; 
@@ -40,4 +46,23 @@
 .custom-control-input:checked~.custom-control-label::before.checkred {
   background-color: red;
   border-color: red;
+}
+
+.pulsate {
+	font-size:48px; 
+	color: #f24537;
+	-webkit-animation: pulsate 3s ease-out;
+	-webkit-animation-iteration-count: infinite; 
+	opacity: 0.5;
+}
+@-webkit-keyframes pulsate {
+	0% { 
+		opacity: 0.5;
+	}
+	50% { 
+		opacity: 1.0;
+	}
+	100% { 
+		opacity: 0.5;
+	}
 }
