--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -1,5 +1,14 @@
-.card, .btn, .form-control, .modal-content { 
-	border-radius: .75rem !important; 
+html, body {
+	overflow-x: hidden;
+	height: 100%;
+}
+
+.card, .btn, .form-control, .modal-content, .alert { 
+	border-radius: 1.5rem !important; 
+}
+.rounded-right {
+	border-top-right-radius: 1.5rem !important; 
+	border-bottom-right-radius: 1.5rem !important; 
 }
 
 .bottom-align-text {
@@ -49,8 +58,6 @@
 }
 
 .pulsate {
-	font-size:48px; 
-	color: #f24537;
 	-webkit-animation: pulsate 3s ease-out;
 	-webkit-animation-iteration-count: infinite; 
 	opacity: 0.5;
