--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -66,6 +66,28 @@ html, body {
 	margin-left:auto; 
 	margin-right:0; 
 }	
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 4px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #b3b3b3;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #737373; 
+}
+::-webkit-scrollbar-button {
+  height: 5px;
+}
 .font-sm {
 	font-size: 70%;
 }
