--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -111,6 +111,22 @@ html, body {
 /*::-webkit-scrollbar-button {
   height: 5px;
 }*/
+.table .thead-light th {
+    color: #495057;
+    background-color: #d3d9df;
+    border-color: #d3d9df;
+}
+.table-striped tbody tr.visible-odd {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.table-striped tbody tr.visible-even {
+    background-color: rgba(0, 0, 0, 0.00);
+}
+
+.table-hover tbody tr.visible-even:hover {
+    background-color: rgba(0, 0, 0, 0.075);
+}
 .font-sm {
 	font-size: 70%;
 }
