--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -12,6 +12,9 @@ html, body {
 .fontsize200 {
     font-size: 2rem;
 }
+.form-select { 
+	font-size: inherit; 
+}
 .h-33 {
 	height: 33% !important;
 }
@@ -33,7 +36,7 @@ html, body {
 .btn-lg {
     font-size: 1.15rem;
 }
-.card, .btn, .form-control, .modal-content, .alert { 
+.card, .btn, .form-control, .modal-content, .alert, .form-select { 
 	border-radius: 1.5rem !important; 
 }
 .btn-group .btn.leftbtn {
