--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -5,6 +5,76 @@ body {
 	font-size: 0.9rem;
 }
 
+/*
+	Custom objects and classes
+*/
+.pulsate {
+	-webkit-animation: pulsate 3s ease-out;
+	-webkit-animation-iteration-count: infinite;
+	opacity: 0.5;
+}
+
+@-webkit-keyframes pulsate {
+	0% {
+		opacity: 0.5;
+	}
+	50% {
+		opacity: 1.0;
+	}
+	100% {
+		opacity: 0.5;
+	}
+}
+
+.alertnotification {
+	display: none;
+	position: absolute;
+	z-index: 1;
+}
+
+#app_alert {
+	bottom: 0;
+	margin-bottom: 10rem !important;
+	z-index: 2000;
+}
+
+#historycontainer {
+	overflow: hidden;
+	border: 1px solid #ced4da;
+	border-radius: .75rem;
+	width: 100%
+}
+
+#history {
+	background-color: #e9ecef;
+	opacity: 1;
+	display: block;
+	width: 100%;
+	overflow-y: auto;
+	padding: .375rem .75rem;
+	/*font-size: 1rem;*/
+	font-weight: 400;
+	line-height: 1.5;
+	color: #495057;
+	background-clip: padding-box;
+	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+	height: 150px;
+	margin-left: auto;
+	margin-right: 0;
+}
+
+/*
+	Custom bootstrap colors
+*/
+:root {
+	--bs-washed-red: #f7d4d7;
+	--bs-washed-yellow: #fff2cc;
+	--bs-washed-green: #a9efce;
+}
+
+/*
+	Font customisations
+*/
 .fontsize60 {
 	font-size: 0.6rem;
 }
@@ -21,6 +91,17 @@ body {
 	font-size: inherit;
 }
 
+.btn-lg {
+	font-size: 1.15rem;
+}
+
+.font-sm {
+	font-size: 70%;
+}
+
+/*
+	Height/width customisations
+*/
 .h-33 {
 	height: 33% !important;
 }
@@ -49,10 +130,14 @@ body {
 	width: 150% !important;
 }
 
-.btn-lg {
-	font-size: 1.15rem;
+.fill {
+	min-height: 100% !important;
+	height: 100% !important;
 }
 
+/*
+	Rounded border customisations
+*/
 .card,
 .btn,
 .form-control,
@@ -93,42 +178,22 @@ body {
 	border-bottom-right-radius: 0 !important;
 }
 
+/*
+	Alignment customisations
+*/
 .bottom-align-text {
 	position: absolute !important;
 	bottom: 0 !important;
 	right: 0 !important;
 }
 
-.fill {
-	min-height: 100% !important;
-	height: 100% !important;
+.no-bottom-margin {
+	margin-bottom: 0 !important;
 }
 
-#historycontainer {
-	overflow: hidden;
-	border: 1px solid #ced4da;
-	border-radius: .75rem;
-	width: 100%
-}
-
-#history {
-	background-color: #e9ecef;
-	opacity: 1;
-	display: block;
-	width: 100%;
-	overflow-y: auto;
-	padding: .375rem .75rem;
-	/*font-size: 1rem;*/
-	font-weight: 400;
-	line-height: 1.5;
-	color: #495057;
-	background-clip: padding-box;
-	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-	height: 150px;
-	margin-left: auto;
-	margin-right: 0;
-}
-
+/*
+	Scrollbar customisations
+*/
 ::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 4px;
@@ -152,6 +217,9 @@ body {
 	background: #737373;
 }
 
+/*
+	Striped table customisations
+*/
 .table-striped .table-light {
 	--bs-table-bg: #dddddd;
 }
@@ -176,14 +244,9 @@ body {
 	--bs-table-hover-bg: unset;
 }
 
-.font-sm {
-	font-size: 70%;
-}
-
-.no-bottom-margin {
-	margin-bottom: 0 !important;
-}
-
+/*
+	Form input customisations
+*/
 .form-switch .form-check-input:checked.checkred {
 	border-color: #dc3545;
 	background-color: #dc3545;
@@ -198,7 +261,6 @@ body {
 	border-color: #adb5bd;
 	background-color: #fff;
 }
-
 
 /*
 .form-switch .form-check-input:focus {
@@ -222,36 +284,6 @@ body {
 	font-size: 0.9rem;
 }
 
-.pulsate {
-	-webkit-animation: pulsate 3s ease-out;
-	-webkit-animation-iteration-count: infinite;
-	opacity: 0.5;
-}
-
-@-webkit-keyframes pulsate {
-	0% {
-		opacity: 0.5;
-	}
-	50% {
-		opacity: 1.0;
-	}
-	100% {
-		opacity: 0.5;
-	}
-}
-
-.alertnotification {
-	display: none;
-	position: absolute;
-	z-index: 1;
-}
-
-#app_alert {
-	bottom: 0;
-	margin-bottom: 10rem !important;
-	z-index: 2000;
-}
-
 .input-fixedwidth90 {
 	min-width: 90px;
 	max-width: 90px;
@@ -267,9 +299,7 @@ body {
 	max-width: 165px;
 }
 
-
 /* BOOTSTRAP 5 CUSTOM SWITCH SIZES */
-
 .form-check-input {
 	clear: left;
 }
@@ -317,6 +347,4 @@ body {
 	width: calc(4rem + 0.75rem);
 	border-radius: 5rem;
 }
-
-
 /* END BOOTSTRAP 5 CUSTOM SWITCH SIZES */
