--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -40,27 +40,34 @@ body {
 
 #historycontainer {
 	overflow: hidden;
-	border: 1px solid #ced4da;
-	border-radius: .75rem;
-	width: 100%
+	border-radius: 1.5rem;
+	width: 100%;
+	border-color: var(--bs-gray-400) !important;
 }
 
 #history {
-	background-color: #e9ecef;
 	opacity: 1;
 	display: block;
 	width: 100%;
 	overflow-y: auto;
 	padding: .375rem .75rem;
-	/*font-size: 1rem;*/
 	font-weight: 400;
 	line-height: 1.5;
-	color: #495057;
 	background-clip: padding-box;
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 	height: 150px;
 	margin-left: auto;
 	margin-right: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+	.bg-light {
+		--bs-bg-opacity: 0.1 !important;
+	}
+	#historycontainer {
+		border-color: var(--bs-gray-700) !important;
+		background-color: var(--bs-body-bg) !important;
+	}
 }
 
 /*
@@ -112,6 +119,10 @@ body {
 
 .w-f-80 {
 	width: 80px !important;
+}
+
+.w-f-90 {
+	width: 90px !important;
 }
 
 .w-f-100 {
@@ -210,31 +221,33 @@ body {
 ::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 4px;
-	background-color: #F5F5F5;
+	background-color: var(--bs-grey-500) !important;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
 ::-webkit-scrollbar {
 	width: 6px;
-	background-color: #e9ecef;
+	background-color: var(--bs-light) !important;
 }
 
 ::-webkit-scrollbar-thumb {
 	border-radius: 4px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: #b3b3b3;
+	background-color: var(--bs-gray) !important;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: #737373;
+	background: var(--bs-grey-dark) !important;
 }
 
 /*
 	Striped table customisations
 */
-.table-striped .table-light {
-	--bs-table-bg: #dddddd;
+@media (prefers-color-scheme: light) {
+	.table-striped .table-light {
+		--bs-table-bg: #dddddd;
+	}
 }
 
 .table-striped tbody tr.visible-odd {
@@ -261,18 +274,18 @@ body {
 	Form input customisations
 */
 .form-switch .form-check-input:checked.checkred {
-	border-color: #dc3545;
-	background-color: #dc3545;
+	border-color: var(--bs-danger);
+	background-color: var(--bs-danger);
 }
 
 .form-switch .form-check-input:checked.checkgreen {
-	border-color: #28a745;
-	background-color: #28a745;
+	border-color: var(--bs-success);
+	background-color: var(--bs-success);
 }
 
 .form-switch .form-check-input:checked.checkneutral {
-	border-color: #adb5bd;
-	background-color: #fff;
+	border-color: var(--bs-gray-400);
+	background-color: var(--bs-white);
 }
 
 /*
