--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -70,6 +70,16 @@ body {
 	}
 }
 
+@media only screen and (max-width: 992px) and (max-height: 776px) {
+	#inputarea {
+		border-top-right-radius: 0 !important;
+	}
+
+	#footer {
+		background-color: var(--bs-light) !important;
+	}
+}
+
 /*
 	Custom bootstrap colors
 */
