Adjust cookie banner z-index

--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -225,6 +225,10 @@ body {
 	margin-bottom: 0 !important;
 }
 
+.glowCookies__banner {
+	z-index: 2000 !important;
+}
+
 /*
 	Scrollbar customisations
 */
