--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -18,9 +18,11 @@ body {
 	0% {
 		opacity: 0.5;
 	}
+
 	50% {
 		opacity: 1.0;
 	}
+
 	100% {
 		opacity: 0.5;
 	}
@@ -42,7 +44,6 @@ body {
 	overflow: hidden;
 	border-radius: 1.5rem;
 	width: 100%;
-	border-color: var(--bs-gray-400) !important;
 }
 
 #history {
@@ -64,6 +65,7 @@ body {
 	.bg-light {
 		--bs-bg-opacity: 0.1 !important;
 	}
+
 	#historycontainer {
 		border-color: var(--bs-gray-700) !important;
 		background-color: var(--bs-body-bg) !important;
@@ -87,6 +89,22 @@ body {
 	--bs-washed-red: #f7d4d7;
 	--bs-washed-yellow: #fff2cc;
 	--bs-washed-green: #a9efce;
+}
+
+.bg-washed-red {
+	background-color: var(--bs-washed-red) !important;
+}
+
+.bg-washed-red>td {
+	background-color: var(--bs-washed-red) !important;
+}
+
+.bg-washed-yellow {
+	background-color: var(--bs-washed-yellow) !important;
+}
+
+.bg-washed-green {
+	background-color: var(--bs-washed-green) !important;
 }
 
 /*
@@ -169,8 +187,8 @@ body {
 }
 
 .google-visualization-tooltip {
-  white-space: nowrap;
-  padding: 10px !important;
+	white-space: nowrap;
+	padding: 10px !important;
 }
 
 /*
@@ -262,30 +280,8 @@ body {
 /*
 	Striped table customisations
 */
-@media (prefers-color-scheme: light) {
-	.table-striped .table-light {
-		--bs-table-bg: #dddddd;
-	}
-}
-
-.table-striped tbody tr.visible-odd {
-	background-color: rgba(0, 0, 0, 0.05);
-	--bs-table-accent-bg: unset;
-}
-
-.table-striped tbody tr.visible-even {
-	background-color: rgba(0, 0, 0, 0.00);
-	--bs-table-accent-bg: unset;
-}
-
-.table-hover tbody tr.visible-odd:hover {
-	background-color: rgba(0, 0, 0, 0.075);
-	--bs-table-hover-bg: unset;
-}
-
-.table-hover tbody tr.visible-even:hover {
-	background-color: rgba(0, 0, 0, 0.075);
-	--bs-table-hover-bg: unset;
+.table-striped thead {
+	--bs-table-bg: var(--bs-secondary-bg-subtle) !important;
 }
 
 /*
@@ -391,4 +387,5 @@ body {
 	width: calc(4rem + 0.75rem);
 	border-radius: 5rem;
 }
+
 /* END BOOTSTRAP 5 CUSTOM SWITCH SIZES */
