More graph and darkmode bugfixes

--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -89,6 +89,10 @@ body {
 	--bs-washed-red: #f7d4d7;
 	--bs-washed-yellow: #fff2cc;
 	--bs-washed-green: #a9efce;
+	--bs-leaves-border: #333;
+	--bs-leaves-shadow: #222;
+	--bs-leaves-bg: #005600;
+	--bs-leaves-bg-light: #309900;
 }
 
 .bg-washed-red {
@@ -105,6 +109,14 @@ body {
 
 .bg-washed-green {
 	background-color: var(--bs-washed-green) !important;
+}
+
+[data-bs-theme=dark] {
+	color-scheme: dark;
+	--bs-leaves-border: #ccc;
+	--bs-leaves-shadow: #c7c7c7;
+	--bs-leaves-bg: #8aff8a;
+	--bs-leaves-bg-light: #dcffcc;
 }
 
 /*
