Bugfix visible pixel pikachu + add source to leaves

--- a/css/leaves.css
+++ b/css/leaves.css
@@ -1,4 +1,5 @@
 /* Leaf animations */
+/* https://codepen.io/uurrnn/pen/Kuylr?editors=1100 */
 
 #leaves {
     /* background: var(--bs-leaves-border); */
