--- a/css/bootstrap_specific_style.css
+++ b/css/bootstrap_specific_style.css
@@ -1,6 +1,6 @@
 html,
 body {
-	overflow-x: hidden;
+	overflow: hidden;
 	height: 100%;
 	font-size: 0.9rem;
 }
@@ -59,6 +59,10 @@ body {
 	height: 150px;
 	margin-left: auto;
 	margin-right: 0;
+}
+
+#footer {
+	z-index: 1000;
 }
 
 @media (prefers-color-scheme: dark) {
